refactor: ResponseDto 정적 팩토리 메서드 추가